# mosze-semester-project-lonelyloners

./: .gitignore  README.md  main.cpp  parancsok  valami.csv
Programteszt/Sample-Test1/: Sample-Test1.sln  Sample-Test1.vcxproj  pch.cpp  pch.h  test.cpp
Programteszt/Sample-Test1/x64/Debug/: Sample-Test1.exe.recipe  Sample-Test1.ilk  Sample-Test1.vcxproj.FileListAbsolute.txt
Programteszt/Sample-Test1/x64/Debug/Sample-Test1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CopyLocal.read.1u.tlog  CopyLocal.write.1u.tlog  Sample-Test1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
game/: .gitignore  CMakeLists(2).txt  CMakeLists.txt  MakeFile  commands.csv  dessert1.3.txt  dessert1.4.txt  planthea2a.txt  user.settings
game/include/: CMakeLists.txt
game/include/headers/: CMakeLists.txt  Collision.h  Command.h  Dessert1.h  Dessert2.h  Entity.h  Glacies.h  LoadPlanet.h  Map.h  Math.h  Menu.h  Planet1.h  Player.h  Plnt.h  Prolog,h  Prolog.h  RenderWindow.h  Router.h  Utils.h  csv2vector.h
game/matrix/dessert/: Dessert_map1.matrix  Dessert_map2_ba.matrix  Dessert_map2_bf.matrix  Dessert_map2_ja.matrix  Dessert_map2_jf.matrix  dessert1.matrix
game/matrix/dessert1/: Dessert_map1.csv  Dessert_map2_ba.csv  Dessert_map2_bf.csv  Dessert_map2_ja.csv  Dessert_map2_jf.csv  Glacies_map1_ak.csv  Glacies_map1_ba.csv  Glacies_map1_bf.csv  Glacies_map1_fk.csv  Glacies_map1_ja.csv  Nosoria_map1_bf.csv  Nosoria_map1_ja.csv  Nosoria_map1_jf.csv  Planthea_map1_ak.csv  Planthea_map1_ba.csv  Planthea_map1_bf.csv  Planthea_map1_fk.csv  Planthea_map1_ja.csv  dessert1.csv  dessert1.matrix
game/matrix/dessert2/: Dessert_map2_0.matrix
game/matrix/glacies/: Glacies_map1_1.matrix  Glacies_map1_3.matrix  Glacies_map1_4.matrix  Glacies_map1_ba.matrix  Glacies_map1_bf.matrix  Glacies_map1_fk.matrix  Glacies_map1_ja.matrix
game/matrix/nosoria/: Nosoria_map1_1.matrix  Nosoria_map1_bf.matrix  Nosoria_map1_ja.matrix
game/matrix/planthea/: Planthea_map1_2.matrix  Planthea_map1_3.matrix  Planthea_map1_bf.matrix  Planthea_map1_fk.matrix  Planthea_map1_ja.matrix
game/res/gfx/Dessert Map2/: dessert_map2_water.aseprite
game/src/: CMakeLists.txt  Command.cpp  Map.cpp  RenderWindow.cpp  Router.cpp  Router.cpp.orig  commands.csv  csv2vector.cpp  entity.cpp  main.cpp  plnt.cpp
game/story/: aeden1a.txt  aeden1a1.txt  aeden1a2.txt  aeden1a3.txt  aeden1a4.txt  aeden1b.txt  bevezeto.txt  dessert1.1.txt  dessert1.2.txt  dessert1.3.txt  dessert1.4.txt  dessert1.txt  dessert2a.txt  dessert2a1.txt  dessert2a2.txt  dessert2b.txt  dessert3a.txt  dessert3a1.txt  dessert3a2.txt  dessert3a3.txt  dessert3b.txt  dessert3c.txt  dessert3d.txt  dessert4a.txt  dessert4b.txt  dessert4c.txt  dessert4d.txt  dessert4e.txt  dessert5a.txt  dessert5b.txt  glacies1.txt  glacies2.txt  glacies3a.txt  glacies3b.txt  glacies3c.txt  glacies3d.txt  glacies4a.txt  glacies4b.txt  glacies4c.txt  glacies4d.txt  (+38 more)
matrix/: desert_1.csv
pch/: CMakeLists copy.txt  CMakeLists.txt  README.txt  pch.cpp  pch.hpp
pch/tests/: CMakeLists.txt  gametest.cpp
probatesz_tesztek/probateszt1/Sample-Test1/: Sample-Test1.sln
probatesz_tesztek/probateszt1/Sample-Test1/Sample-Test1/: Sample-Test1.vcxproj  pch.cpp  pch.h  test.cpp
probatesz_tesztek/probateszt1/Sample-Test1/Sample-Test1/x64/Debug/: Sample-Test1.exe.recipe  Sample-Test1.vcxproj.FileListAbsolute.txt
probatesz_tesztek/probateszt1/Sample-Test1/Sample-Test1/x64/Debug/Sample-Test1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CopyLocal.read.1u.tlog  CopyLocal.write.1u.tlog  Sample-Test1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/: Command.cpp  Router.cpp  csv2vector.cpp
src/headers/: Command.h  Player.h  Router.h  csv2vector.h
